finished home and team page

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -2,8 +2,24 @@
 title: Le Wagon - Middleman
 ---
 
+<%= partial "components/banner" %>
+<div class="container">
+  <div class="row">
+    <div class="col-xs-12 col-sm-4">
+      <%= partial "components/card" %>
+    </div>
+    <div class="col-xs-12 col-sm-4">
+      <%= partial "components/card" %>
+    </div>
+    <div class="col-xs-12 col-sm-4">
+      <%= partial "components/card" %>
+    </div>
+  </div>
+</div>
+
 <div id="home">
   <div class="home-content">
+
     <%= image_tag "logo.png", width: "200" %>
     <p>
       Middleman is now running!
