--- a/source/team.html.erb
+++ b/source/team.html.erb
@@ -2,13 +2,15 @@
 title: Le Wagon - Middleman - Team
 ---
 
-<ul class="list-inline text-center">
-  <h1>This template is built with <i class="fa fa-heart"></i> by</h1>
-  <% data.users.each do |user| %>
-    <li>
-      <%= image_tag "https://kitt.lewagon.com/placeholder/users/#{user.github_nickname}", class: "img-circle img-size" %>
-      <h2><%= user.name.upcase %></h2>
-      <h3><%= user.github_nickname %></h3>
-    </li>
-  <% end %>
-</ul>
+<div id="team">
+  <ul class="list-inline text-center">
+    <h1>This template is built with <i class="fa fa-heart"></i> by</h1>
+    <% data.users.each do |user| %>
+      <li>
+        <%= image_tag "https://kitt.lewagon.com/placeholder/users/#{user.github_nickname}", class: "img-circle" %>
+        <h2><%= user.name.upcase %></h2>
+        <h3><%= user.github_nickname %></h3>
+      </li>
+    <% end %>
+  </ul>
+</div>
