remade landing page structure

--- a/source/team.html.erb
+++ b/source/team.html.erb
@@ -9,7 +9,7 @@ title: Le Wagon - Middleman - Team
       <li>
         <%= image_tag "https://kitt.lewagon.com/placeholder/users/#{user.github_nickname}", class: "img-circle" %>
         <h2><%= user.name.upcase %></h2>
-        <h3><%= user.github_nickname %></h3>
+        <p><i class="fa fa-github"></i> <%= user.github_nickname %></p>
       </li>
     <% end %>
   </ul>
