--- a/source/stylesheets/config/_colors.scss
+++ b/source/stylesheets/config/_colors.scss
@@ -1,7 +1,8 @@
 // Define variables for your color scheme
 
 // For example:
-$red: #EE5F5B;
+// $red: #EE5F5B;
+$red: #DDEE00;
 $blue: #469AE0;
 $yellow: #FDB631;
 $orange: #E67E22;
