--- a/source/stylesheets/components/_card.scss
+++ b/source/stylesheets/components/_card.scss
@@ -43,7 +43,11 @@
   z-index: 2;
   background: black;
   opacity: 0;
+
+  &:hover {
+    opacity: 0.1;
+  }
 }
-.card-link:hover {
-  opacity: 0.1;
-}
+// .card-link:hover {
+//   opacity: 0.1;
+// }
