--- a/source/stylesheets/config/_bootstrap_variables.scss
+++ b/source/stylesheets/config/_bootstrap_variables.scss
@@ -11,7 +11,7 @@ $font-size-base: 18px;
 
 // Colors
 $gray-base:       $gray;
-$brand-primary:   $blue;
+$brand-primary:   $red;
 $brand-success:   $green;
 $brand-info:      $yellow;
 $brand-danger:    $red;
@@ -19,7 +19,6 @@ $brand-warning:   $orange;
 
 // Buttons & inputs' radius
 $border-radius-base:  2px;
-$border-radius-large: 2px;
+$border-radius-large: 20px;
 $border-radius-small: 2px;
 
-// Override other variables below!
